--- a/delivery.yaml
+++ b/delivery.yaml
@@ -3,7 +3,7 @@ version: '2017-09-20'
 dependencies:
   - id: java
     type: docker
-    ref: registry.opensource.zalan.do/library/eclipse-temurin-8-jdk
+    ref: container-registry.zalando.net/library/eclipse-temurin-8-jdk
 
 pipeline:
 - id: build
